--- a/configs/template.yaml
+++ b/configs/template.yaml
@@ -16,7 +16,7 @@ data_sampler_args:
 dataset_name: fashion-mnist
 defense: LeadFL
 epochs: 10
-experiment_prefix: Final
+experiment_prefix: INITIAL-CODE-TESTING-LeadFL # Final
 mal_boost: 1
 mal_clients_per_round: 2
 net_name: FashionMNISTCNN
@@ -26,7 +26,7 @@ offload_stategy: deadline
 output_location: output
 pert_strength: 0.2
 regular_weight: 0.4
-rounds: 80
+rounds: 5 #80
 selection_method: random
 single_machine: true
 tensor_board_active: true
