commit used to run hyperparameter tunning prior to pivoting to retaining pseudo patterns

--- a/configs/template.yaml
+++ b/configs/template.yaml
@@ -16,7 +16,8 @@ data_sampler_args:
 dataset_name: fashion-mnist
 defense: null
 epochs: 10
-experiment_prefix: SCORED-USING-CLIENT2CLIENT-AND-CLIENT2SERVER # Final
+experiment_prefix: RANDOM-TESTING-CLIENT2SERVER #SCORED-USING-CLIENT2CLIENT-AND-CLIENT2SERVER # Final
+run_prefix: ""
 mal_boost: 1
 mal_clients_per_round: 2
 net_name: FashionMNISTCNN
@@ -32,3 +33,9 @@ single_machine: true
 tensor_board_active: true
 use_wandb: true
 wait_for_clients: true
+############################
+# for any new param added here, it must also be add to ./fltk/util/config/config.py
+pseudo_lr: 0.01 # best 0.01
+pseudo_momentum: 0.99 # best 0.99
+pseudo_iterations: 100 # best 100
+#############################
