checked in last running code and added gitignore

--- a/configs/template.yaml
+++ b/configs/template.yaml
@@ -3,7 +3,7 @@ attack_client: Backdoor
 attack_epochs: 10
 attack_server: null
 backdoor_config: configs/backdoor_tasks/mnist_params_pattern.yaml
-backdoor_type: 9-pixel
+backdoor_type: 1-pixel # 9-pixel
 batch_size: 32
 clients_per_round: 10
 cluster: false
@@ -14,9 +14,9 @@ data_sampler_args:
 - 5
 - 42
 dataset_name: fashion-mnist
-defense: null
-epochs: 10
-experiment_prefix: RANDOM-TESTING-CLIENT2SERVER #SCORED-USING-CLIENT2CLIENT-AND-CLIENT2SERVER # Final
+defense: null # LeadFL
+epochs: 10 # 10
+experiment_prefix: TESTING-MULTI-KRUM
 run_prefix: ""
 mal_boost: 1
 mal_clients_per_round: 2
@@ -27,8 +27,8 @@ offload_stategy: deadline
 output_location: output
 pert_strength: 0.2
 regular_weight: 0.4
-rounds: 40 #80
-selection_method: random
+rounds: 80
+selection_method: random # (random: for this method, mal_clients_per_round doesn't have any effect, for num_clients/num_mal_clients/clients_per_round=100/25/10, there are on average 2.5 malicious selected
 single_machine: true
 tensor_board_active: true
 use_wandb: true
@@ -36,6 +36,6 @@ wait_for_clients: true
 ############################
 # for any new param added here, it must also be add to ./fltk/util/config/config.py
 pseudo_lr: 0.01 # best 0.01
-pseudo_momentum: 0.99 # best 0.99
+pseudo_momentum: 0.9 # best 0.99
 pseudo_iterations: 100 # best 100
 #############################
