tried targeted attack

--- a/configs/template.yaml
+++ b/configs/template.yaml
@@ -1,5 +1,5 @@
-aggregation: krum_pseudo
-attack_client: Backdoor
+aggregation: multiKrum_pseudo
+attack_client: TargetedAttack # Backdoor
 attack_epochs: 10
 attack_server: null
 backdoor_config: configs/backdoor_tasks/mnist_params_pattern.yaml
@@ -16,7 +16,7 @@ data_sampler_args:
 dataset_name: fashion-mnist
 defense: null # LeadFL
 epochs: 10 # 10
-experiment_prefix: TESTING-MULTI-KRUM
+experiment_prefix: testing-with-targeted-attack
 run_prefix: ""
 mal_boost: 1
 mal_clients_per_round: 2
@@ -28,7 +28,7 @@ output_location: output
 pert_strength: 0.2
 regular_weight: 0.4
 rounds: 80
-selection_method: random # (random: for this method, mal_clients_per_round doesn't have any effect, for num_clients/num_mal_clients/clients_per_round=100/25/10, there are on average 2.5 malicious selected
+selection_method: consistent # (random: for this method, mal_clients_per_round doesn't have any effect, for num_clients/num_mal_clients/clients_per_round=100/25/10, there are on average 2.5 malicious selected
 single_machine: true
 tensor_board_active: true
 use_wandb: true
@@ -36,6 +36,6 @@ wait_for_clients: true
 ############################
 # for any new param added here, it must also be add to ./fltk/util/config/config.py
 pseudo_lr: 0.01 # best 0.01
-pseudo_momentum: 0.9 # best 0.99
+pseudo_momentum: 0.99 # best 0.99
 pseudo_iterations: 100 # best 100
 #############################
