--- a/fltk/.gitignore
+++ b/fltk/.gitignore
@@ -161,6 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-outputs
-wandb
+outputs/
+wandb/
+.data/
+data/
 **/__pycache__/
