--- a/fltk/.gitignore
+++ b/fltk/.gitignore
@@ -161,8 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-outputs/
-wandb/
-.data/
-data/
+outputs
+wandb
+.data
+data
 **/__pycache__/
