--- a/configs/template_cifar10.yaml
+++ b/configs/template_cifar10.yaml
@@ -16,8 +16,8 @@ data_sampler_args:
 dataset_name: cifar10
 defense: null # LeadFL
 epochs: 10 # 10
-experiment_prefix: MODIFIED-LOGIC-TESTING-CIFAR10 #TESTING_BULYAN 
-run_prefix: "s2c"
+experiment_prefix: CIFAR10-AFTER-SOFTMAX-FIX_RANDOM_cifar10_uniform #TESTING_BULYAN 
+run_prefix: ""
 mal_boost: 1
 mal_clients_per_round: 2
 net_name: Cifar10CNN
@@ -28,7 +28,7 @@ output_location: output
 pert_strength: 0.2
 regular_weight: 0.4
 rounds: 50
-selection_method: consistent # (random: for this method, mal_clients_per_round doesn't have any effect, for num_clients/num_mal_clients/clients_per_round=100/25/10, there are on average 2.5 malicious selected
+selection_method: random # consistent # (random: for this method, mal_clients_per_round doesn't have any effect, for num_clients/num_mal_clients/clients_per_round=100/25/10, there are on average 2.5 malicious selected
 single_machine: true
 tensor_board_active: true
 use_wandb: true
@@ -36,15 +36,15 @@ wait_for_clients: true
 ############################
 num_label_classes: 10
 # for any new param added here, it must also be add to ./fltk/util/config/config.py
-pseudo_lr: 0.1 # best 0.01
-pseudo_momentum: 0.9 # best 0.99
-pseudo_iterations: 1000 # best 1000
+pseudo_lr: 0.9 # works (didn't hyper-tune)
+pseudo_momentum: 0.9 # works (didn't hyper-tune)
+pseudo_iterations: 1000 # works (didn't hyper-tune)
 num_pseudo_patterns_per_label: 10
-pseudo_real_dataset_name: cifar10  # use real dataset instaed of pseudo patterns
+pseudo_real_dataset_name: cifar10
 input_width: 32
 input_height: 32
 input_channels: 3
-num_clients_to_select: 5 # no longer need, now calculated as num_client_per_round - mal_clients_per_roun
-use_server_alignment: true  # best setting is client to client alignment
-use_real_images: false
+num_clients_to_select: 5 # only used for randon setting
+use_server_alignment: false # best setting is client to client alignment
+use_real_images: false # works (didn't hyper-tune)
 #############################
