--- a/configs/template_fashion_mnist.yaml
+++ b/configs/template_fashion_mnist.yaml
@@ -9,17 +9,17 @@ clients_per_round: 10
 cluster: false
 cluster_stored_rounds: 10
 cuda: true
-data_sampler: dirichlet # dirichlet, n_labels (not valid), uniform
+data_sampler: uniform # dirichlet # dirichlet, n_labels (not valid), uniform
 data_sampler_args:
 - 5
 - 42
 dataset_name: fashion-mnist # cifar10
 defense: null # LeadFL
 epochs: 10 # 10
-experiment_prefix: TESTING-CODE-REFACTOR #TESTING_BULYAN 
-run_prefix: ""
+experiment_prefix: MNIST-AFTER-SOFTMAX-FIX_CONSISTENT_cifar10_uniform #TESTING_BULYAN 
+run_prefix: "c2c"
 mal_boost: 1
-mal_clients_per_round: 5 #2
+mal_clients_per_round: 2
 net_name: FashionMNISTCNN # Cifar10CNN
 num_clients: 100
 num_mal_clients: 25
@@ -27,18 +27,18 @@ offload_stategy: deadline
 output_location: output
 pert_strength: 0.2
 regular_weight: 0.4
-rounds: 100
-selection_method: random # consistent # (random: for this method, mal_clients_per_round doesn't have any effect, for num_clients/num_mal_clients/clients_per_round=100/25/10, there are on average 2.5 malicious selected
+rounds: 50
+selection_method: consistent # (random: for this method, mal_clients_per_round doesn't have any effect, for num_clients/num_mal_clients/clients_per_round=100/25/10, there are on average 2.5 malicious selected
 single_machine: true
 tensor_board_active: true
-use_wandb: false
+use_wandb: true
 wait_for_clients: true
 ############################
 num_label_classes: 10
 # for any new param added here, it must also be add to ./fltk/util/config/config.py
-pseudo_lr: 0.9 # best 0.01
-pseudo_momentum: 0.99 # best 0.99
-pseudo_iterations: 1000 # best 1000
+pseudo_lr: 0.9 # best
+pseudo_momentum: 0.99 # best
+pseudo_iterations: 1000 # best
 num_pseudo_patterns_per_label: 10
 input_width: 28
 input_height: 28
