--- a/configs/temp_cifar10_iter.yaml
+++ b/configs/temp_cifar10_iter.yaml
@@ -16,8 +16,8 @@ data_sampler_args:
 dataset_name: cifar10
 defense: null # LeadFL
 epochs: 10 # 10
-experiment_prefix: TESTING-BUSTY-ATTACKS-CIFAR10 #TESTING_BULYAN 
-run_prefix: ""
+experiment_prefix: ABLATION-NEED-FOR-PSEUDO-OPTIMIZATION (CIFAR10) 0.9 momentum
+run_prefix: lr:0.9-momentum:0.9-iterations:1-
 mal_boost: 1
 mal_clients_per_round: 2
 net_name: Cifar10CNN
@@ -36,15 +36,15 @@ wait_for_clients: true
 ############################
 num_label_classes: 10
 # for any new param added here, it must also be add to ./fltk/util/config/config.py
-pseudo_lr: 0.9 # works (didn't hyper-tune)
-pseudo_momentum: 0.99 # works (didn't hyper-tune)
-pseudo_iterations: 1000 # works (didn't hyper-tune)
+pseudo_lr: 0.9
+pseudo_momentum: 0.9
+pseudo_iterations: 1
 num_pseudo_patterns_per_label: 10
 pseudo_real_dataset_name: cifar10
 input_width: 32
 input_height: 32
 input_channels: 3
 num_clients_to_select: 5 # only used for randon setting
-use_server_alignment: false # best setting is client to client alignment
-use_real_images: false # works (didn't hyper-tune)
+use_server_alignment: false
+use_real_images: false
 #############################
